--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     ]
   },
   "dependencies": {
+    "graphql-request": "^2.0.0",
     "next": "12.0.10",
     "next-pwa": "^5.3.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "styled-components": "5.3.3"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "6.4.17",
@@ -39,9 +39,9 @@
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.14",
     "@types/react": "^17.0.27",
-    "@types/styled-components": "^5.1.21",
     "@typescript-eslint/eslint-plugin": "5.10.2",
     "@typescript-eslint/parser": "5.10.2",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.8.0",
     "eslint-config-next": "^12.0.10",
     "eslint-config-prettier": "^8.3.0",
@@ -50,11 +50,12 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^7.0.2",
     "jest": "^27.4.7",
-    "jest-styled-components": "^7.0.5",
     "lint-staged": "^12.3.3",
     "plop": "^3.0.5",
+    "postcss": "^8.4.30",
     "prettier": "^2.4.1",
     "storybook-addon-next-router": "^3.0.8",
+    "tailwindcss": "^3.3.3",
     "typescript": "^4.5.5",
     "webpack": "5.68.0"
   }
